- Revert reactive apps with jdbc implementation back to servlet - Reimplemented servlet libs where needed - Change person-faste-data-service from reactive to servlet (was a mix of both) #deploy-brreg-stub #deploy-inntektsmelding-service #deploy-organisasjon-bestilling-service #deploy-organisasjon-faste-data-service #deploy-organisasjon-forvalter #deploy-orgnummer-service #deploy-test-pdl-forvalter #deploy-person-faste-data-service #deploy-testnorge-statisk-data-forvalter #deploy-udi-stub #deploy-varslinger-service