@@ -5,10 +5,9 @@ import no.nav.organisasjonforvalter.config.Consumers;
 import no.nav.organisasjonforvalter.consumer.command.AdresseServiceCommand;
 import no.nav.testnav.libs.dto.adresseservice.v1.VegadresseDTO;
 import no.nav.testnav.libs.securitycore.domain.ServerProperties;
-import no.nav.testnav.libs.reactivesecurity.exchange.TokenExchange;
+import no.nav.testnav.libs.servletsecurity.exchange.TokenExchange;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
-import reactor.core.publisher.Mono;
 
 import java.util.Arrays;
 import java.util.List;
@@ -47,19 +46,21 @@ public class AdresseServiceConsumer {
                 .build();
     }
 
-    public Mono<List<VegadresseDTO>> getAdresser(String query) {
+    public List<VegadresseDTO> getAdresser(String query) {
 
         long startTime = currentTimeMillis();
 
-        return tokenExchange.exchange(serverProperties)
-                .flatMap(token -> new AdresseServiceCommand(webClient, query, token.getTokenValue()).call())
-                .map(adresser -> {
-                    log.info("Adresseoppslag tok {} ms", currentTimeMillis() - startTime);
-                    return Arrays.asList(adresser);
-                })
-                .onErrorResume(e -> {
-                    log.error("Henting av adresse feilet", e);
-                    return Mono.just(List.of(getDefaultAdresse()));
-                });
+        try {
+            var adresser = tokenExchange.exchange(serverProperties)
+                    .flatMap(token -> new AdresseServiceCommand(webClient, query, token.getTokenValue()).call()).block();
+
+            log.info("Adresseoppslag tok {} ms", currentTimeMillis() - startTime);
+            return Arrays.asList(adresser);
+
+        } catch (RuntimeException e) {
+
+            log.error("Henting av adresse feilet", e);
+            return List.of(getDefaultAdresse());
+        }
     }
 }
